prevent collections scrollbar from dragging dialog

--- a/scss/components/_selectItemsDialog.scss
+++ b/scss/components/_selectItemsDialog.scss
@@ -73,6 +73,18 @@
     .dialog-button-box button {
         -moz-window-dragging: no-drag;
     }
+
+	// Move padding into rows so that draggable collection container
+	// does not expand all the way past the scrollbar and cause draggin scrollbar
+	// to drag the entire window.
+	#zotero-collections-tree-container {
+		.virtualized-table-body {
+			padding-inline-end: 0;
+			.row {
+				padding-inline-end: 8px;
+			}
+		}
+	}
 }
 
 // richlistbox elements are crazy and will expand beyond the window size
